# qagentic-analytics-engine

./: .env.example  .env.local  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml  requirements.txt  start.sh
docs/: architecture.md
qagentic_analytics/: __init__.py  config.py  db.py  main.py
qagentic_analytics/cache/: __init__.py
qagentic_analytics/db/: __init__.py
qagentic_analytics/reports/: comparison.py  sharing.py  templates.py  trends.py
qagentic_analytics/routes/: __init__.py  api.py  clusters.py  custom_metrics.py  dashboard.py  metrics.py  visualization.py
qagentic_analytics/schemas/: __init__.py  cluster.py  metrics.py
qagentic_analytics/services/: __init__.py  aggregation.py  clustering.py  clustering_service.py  custom_metrics_service.py  dependecies.py  embedding.py  metrics.py  metrics_service.py  pattern_service.py  streaming.py  text_analysis.py  trend_service.py
